<resources>
    <string name="app_name">A Messenger</string>
    <string name="facebook_app_id">248249045591860</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="newAccount">Create New Account</string>
    <string name="fullName">Full Name</string>
    <string name="signUp">Sign Up</string>
    <string name="cancel">Cancel</string>
    <string name="chatHint">Type message to send...</string>
    <string name="or">Or</string>
</resources>
